--- a/index.html
+++ b/index.html
@@ -2,44 +2,45 @@
 <html lang="pt">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pedro F. Pesserl</title>
     <link rel="stylesheet" href="css/my-website.css">
 </head>
 
 <body>
-  <header>
-      <nav class="menu">
-        <ul>
-          <li><a href="#">Sobre</a></li>
-          <li><a href="#">Portfólio</a></li>
-          <li><a href="#">Contato</a></li>
-        </ul>
-      </nav>
+    <header>
+        <nav class="menu">
+            <ul>
+            <li><a href="#">Sobre</a></li>
+            <li><a href="#">Portfólio</a></li>
+            <li><a href="#">Contato</a></li>
+            </ul>
+        </nav>
 
-      <div>
-        <h1 class="site-title">Pedro Folloni Pesserl</h1>
-        <h2 class="site-subtitle">estudante de ensino médio</h2>
-      </div>
-      
-  </header>
-    <section>
-      <h2>Portfólio</h2>
-      <figure>
-        <img class="img-portfolio" src="./img/ecommerce.jpg" alt="eCommerce">
-        <figcaption>eCommerce</figcaption>
-      </figure>
-      <figure>
-        <img class="img-portfolio" src="./img/mobile.jpg" alt="Mobile">
-        <figcaption>Mobile</figcaption>
-      </figure>
-      <figure>
-        <img class="img-portfolio" src="./img/web-design.jpg" alt="Web design">
-        <figcaption>Web design</figcaption>
-      </figure>
-      <figure>
-        <img class="img-portfolio" src="./img/hackermans.jpg" alt="Projetos pessoais">
-        <figcaption>Projetos pessoais</figcaption>
-      </figure>
-    </section>
+        <div>
+            <h1 class="site-title">Pedro Folloni Pesserl</h1>
+            <h2 class="site-subtitle">estudante de ensino médio</h2>
+        </div>
+        
+    </header>
+        <section>
+            <h2>Portfólio</h2>
+            <figure>
+                <img class="img-portfolio" src="./img/ecommerce.jpg" alt="eCommerce">
+                <figcaption>eCommerce</figcaption>
+            </figure>
+            <figure>
+                <img class="img-portfolio" src="./img/mobile.jpg" alt="Mobile">
+                <figcaption>Mobile</figcaption>
+            </figure>
+            <figure>
+                <img class="img-portfolio" src="./img/web-design.jpg" alt="Web design">
+                <figcaption>Web design</figcaption>
+            </figure>
+            <figure>
+                <img class="img-portfolio" src="./img/hackermans.jpg" alt="Projetos pessoais">
+                <figcaption>Projetos pessoais</figcaption>
+            </figure>
+        </section>
 </body>
 </html>
