--- a/index.html
+++ b/index.html
@@ -1,25 +1,16 @@
-<!DOCTYPE html>
-<html lang="pt">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pedro F. Pesserl</title>
-    <link rel="stylesheet" href="css/my-website.css">
-</head>
-
 <body>
     <header>
         <nav class="menu">
             <ul>
-            <li><a href="#">Sobre</a></li>
-            <li><a href="#">Portfólio</a></li>
-            <li><a href="#">Contato</a></li>
+                <li><a href="#">Sobre</a></li>
+                <li><a href="#">Portfólio</a></li>
+                <li><a href="#">Contato</a></li>
             </ul>
         </nav>
 
         <div>
             <h1 class="site-title">Pedro Folloni Pesserl</h1>
-            <h2 class="site-subtitle">estudante de ensino médio</h2>
+            <h2 class="site-subtitle">hackerman em formação</h2>
         </div>
         
     </header>
