--- a/index.html
+++ b/index.html
@@ -1,3 +1,12 @@
+<!DOCTYPE html>
+<html lang="pt">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Pedro F. Pesserl</title>
+    <link rel="stylesheet" href="css/my-website.css">
+</head>
+
 <body>
     <header>
         <nav class="menu">
