--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <header>
         <nav class="menu">
             <ul>
-                <li><a href="#">Sobre</a></li>
-                <li><a href="#">Portfólio</a></li>
+                <li><a href="#">Sobre mim</a></li>
+                <li><a href="#">Projetos</a></li>
                 <li><a href="#">Contato</a></li>
             </ul>
         </nav>
@@ -23,24 +23,28 @@
         </div>
         
     </header>
-    <section>
-        <h2>Portfólio</h2>
-        <figure>
-            <img class="img-portfolio" src="./img/ecommerce.jpg" alt="eCommerce">
-            <figcaption>eCommerce</figcaption>
-        </figure>
-        <figure>
-            <img class="img-portfolio" src="./img/mobile.jpg" alt="Mobile">
-            <figcaption>Mobile</figcaption>
-        </figure>
-        <figure>
-            <img class="img-portfolio" src="./img/web-design.jpg" alt="Web design">
-            <figcaption>Web design</figcaption>
-        </figure>
-        <figure>
-            <img class="img-portfolio" src="./img/hackermans.jpg" alt="Projetos pessoais">
-            <figcaption>Projetos pessoais</figcaption>
-        </figure>
+    <section class="projetos">
+        <h2>Projetos</h2>
+
+        <div class="grid">
+            <figure>
+                <img class="img-projetos" src="./img/ecommerce.jpg" alt="eCommerce">
+                <figcaption>eCommerce</figcaption>
+            </figure>
+            <figure>
+                <img class="img-projetos" src="./img/mobile.jpg" alt="Mobile">
+                <figcaption>Mobile</figcaption>
+            </figure>
+            <figure>
+                <img class="img-projetos" src="./img/web-design.jpg" alt="Web design">
+                <figcaption>Web design</figcaption>
+            </figure>
+            <figure>
+                <img class="img-projetos" src="./img/hackermans.jpg" alt="Projetos pessoais">
+                <figcaption>Projetos pessoais</figcaption>
+            </figure>
+        </div>
+        
     </section>
 </body>
 </html>
