--- a/index.html
+++ b/index.html
@@ -5,15 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pedro F. Pesserl</title>
     <link rel="stylesheet" href="css/my-website.css">
+    <script src="https://kit.fontawesome.com/a49fca7a30.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
     <header>
         <nav class="menu">
             <ul>
-                <li><a href="#">Sobre mim</a></li>
-                <li><a href="#">Projetos</a></li>
-                <li><a href="#">Contato</a></li>
+                <li><a href="#sobre">Sobre mim</a></li>
+                <li><a href="#projetos">Projetos</a></li>
+                <li><a href="#contato">Contato</a></li>
             </ul>
         </nav>
 
@@ -23,7 +24,7 @@
         </div>
         
     </header>
-    <section class="projetos">
+    <section class="projetos" id="projetos">
         <h2>Projetos</h2>
 
         <div class="grid">
@@ -45,6 +46,24 @@
             </figure>
         </div>
         
+    </section>
+    <section class="contato" id="contato">
+        <h2>Contato</h2>
+
+        <div class ="grid icons">
+            <a target="_blank" href="https://github.com/dro-pe">
+                <i class="fab fa-github"></i>
+            </a>
+            <a target="_blank" href="https://twitter.com/pedrofpesserl">
+                <i class="fab fa-twitter"></i>
+            </a>
+            <a target="_blank" href="https://instagram.com/pedrofpesserl">
+                <i class="fab fa-instagram"></i>
+            </a>
+            <a target="_blank" href="mailto:fpesserl7@gmail.com">
+                <i class="fas fa-envelope"></i>
+            </a>
+        </div>
     </section>
 </body>
 </html>
