--- a/index.html
+++ b/index.html
@@ -9,11 +9,15 @@
 </head>
 
 <body>
+    <a id="top"></a>
     <header>
         <nav class="menu">
             <ul class="container">
+                <li><a href="#top" class="back-to-top">
+                    <i class="fas fa-home"></i>
+                </a></li>
                 <li><a href="#sobre">Sobre mim</a></li>
-                <li><a href="#projetos">Projetos</a></li>
+                <li><a href="#projetos">Interesses/Projetos</a></li>
                 <li><a href="#contato">Contato</a></li>
             </ul>
         </nav>
@@ -36,18 +40,18 @@
         </p>
     </section>
     <section class="projetos container" id="projetos">
-        <h2>Projetos</h2>
+        <h2>Interesses/Projetos</h2>
 
         <div class="grid">
 
             <div class="flip-card">
                 <div class="card">
                     <figure class="card-front">
-                        <img class="img-projetos" src="./img/ecommerce.jpg" alt="eCommerce">
-                        <figcaption>eCommerce</figcaption>
+                        <img class="img-projetos" src="./img/topologia.gif" alt="Matemática">
+                        <figcaption>Matemática</figcaption>
                     </figure>
                     <div class="card-back">
-                        parte de tras do ecommerce
+                        Sempre me interessei por matemática, em especial as áreas de Topologia e Teoria de Números
                     </div>
                 </div>
             </div>
@@ -55,11 +59,11 @@
             <div class="flip-card">
                 <div class="card">
                     <figure class="card-front">
-                        <img class="img-projetos" src="./img/mobile.jpg" alt="Mobile">
-                        <figcaption>Mobile</figcaption>
+                        <img class="img-projetos" src="./img/compsci.jpg" alt="Faculdade">
+                        <figcaption>Faculdade</figcaption>
                     </figure>
                     <div class="card-back">
-                        parte de tras do mobile
+                        Pretendo fazer faculdade de Ciência da Computação ou Sistemas de Informação
                     </div>
                 </div>
             </div>
@@ -67,11 +71,11 @@
             <div class="flip-card">
                 <div class="card">
                     <figure class="card-front">
-                        <img class="img-projetos" src="./img/web-design.jpg" alt="Web design">
-                        <figcaption>Web design</figcaption>
+                        <img class="img-projetos" src="./img/hilary-hahn.jpg" alt="Música">
+                        <figcaption>Música</figcaption>
                     </figure>
                     <div class="card-back">
-                        parte de tras do web
+                        Comecei a estudar violino em 2019, agora toco algumas músicas simples
                     </div>
                 </div>
             </div>
@@ -79,11 +83,23 @@
             <div class="flip-card">
                 <div class="card">
                     <figure class="card-front">
-                        <img class="img-projetos" src="./img/hackermans.jpg" alt="Projetos pessoais">
-                        <figcaption>Projetos pessoais</figcaption>
+                        <img class="img-projetos" src="./img/xadrez.jpg" alt="Xadrez">
+                        <figcaption>Xadrez</figcaption>
                     </figure>
                     <div class="card-back">
-                        parte de tras do projetos
+                        Jogo xadrez por diversão, meu rating está por volta de 1300 :)
+                    </div>
+                </div>
+            </div>
+
+            <div class="flip-card">
+                <div class="card">
+                    <figure class="card-front">
+                        <img class="img-projetos" src="./img/alura.png" alt="Alura">
+                        <figcaption>Alura</figcaption>
+                    </figure>
+                    <div class="card-back">
+                        Comecei a estudar programação e desenvolvimento front-end pelos cursos grátis da Alura - esse site foi feito durante a Imersão CSS
                     </div>
                 </div>
             </div>
